# twidder

./: .gitignore  Cargo.toml  README.md  readme.md  tests.rest
entity/: Cargo.toml
entity/src/: media.rs  mod.rs  post.rs  prelude.rs  user.rs
migration/src/: m20220101_000001_create_table.rs
src/: api.rs  db.rs  main.rs  models.rs  router.rs  tls.rs
src/api/: auth.rs  errors.rs  posts.rs  settings.rs  users.rs
src/models/: posts.rs  settings.rs  user.rs
