[package]
name = "actix_test"
version = "0.1.0"
edition = "2021"¨
authors = ["commanderxa" <art.ostrikov@gmail.com>]
readme = "readme.md"
publish = false
license = "MPL-2.0"
license-file = "license.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.1"
serde = "1.0.144"
chrono = "0.4.22"
uuid = "1.1.2"

[dependencies.sea-orm]
version = "0.9.2"
features = ["sqlx-postgres", "runtime-actix-rustls", "macros" ]
