[package]
name = "twidder"
version = "0.1.0"
edition = "2021"
authors = ["commanderxa <art.ostrikov@gmail.com>"]
publish = false
readme = "README.md"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = { version = "4.2.1", features = ["rustls"] }
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.1"
serde = "1.0.144"
serde_json = "1.0.85"
chrono = "0.4.22"
uuid = "1.1.2"
dotenv = "0.15.0"
sha2 = "0.10.6"
hex = "0.4.3"

[dependencies.sea-orm]
version = "0.9.2"
features = ["sqlx-postgres", "runtime-actix-rustls", "macros" ]
